packages/@okta/vuepress-theme-prose/assets/css/components/_feedback.scss
/* QUALTRICS FEEDBACK WIDGET */
#feedback-tab {
  position: fixed;

  right: 0;
  bottom: 158px;

  width: 36px;
  height: 139px;

  overflow: hidden;

  background-color: #242424;
}

#feedback-link {
  display: inline-block;
  width: 100%;
  height: 100%;
}

#feedback-container {
  transform: translate(0,70px);
}

#feedback-text {
  transform: rotate(270deg);

  font-size: 1em;
  font-family: "arial", sans-serif;
  color: #ffffff;
}

